syntax = "proto3";
option go_package = "api_pb";
package com.github.rerost.todolist_server.api;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/field_mask.proto";

service TaskService {
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {
  }
  rpc GetTask (GetTaskRequest) returns (Task) {
  }
  rpc CreateTask (CreateTaskRequest) returns (Task) {
  }
  rpc UpdateTask (UpdateTaskRequest) returns (Task) {
  }
  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty) {
  }
  rpc StreamTask(CreateTaskRequest) returns (stream Task){
  }
}

message Task {
  int64 task_id = 1;
  string title = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp deadline = 4;
  google.protobuf.StringValue note = 5;
}

message ListTasksRequest {
  google.protobuf.FieldMask fields = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message GetTaskRequest {
  string task_id = 1;
}

message CreateTaskRequest {
  Task task = 1;
}

message UpdateTaskRequest {
  Task task = 1;
}

message DeleteTaskRequest {
  string task_id = 1;
}
